--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://gz-default.netlify.com/"
+baseURL = "https://westdistrictstatesboro.com/"
 languageCode = "en-us"
 theme = "site-theme"
 title = "West District Statesboro"
