--- a/themes/site-theme/data/global_data.toml
+++ b/themes/site-theme/data/global_data.toml
@@ -1,5 +1,5 @@
 [meta]
-description = "This domain is established to be used for illustrative examples in documents. You may use this domain in examples without prior coordination or asking for permission."
+description = "With restaurants, office space, lofts, parking, and an open yard for monthly activites, the West District is primed to make downtown Statesboro the place you'll want to live, work, and play."
 [contact_numbers]
 phone = "555.555.5555"
 fax = "555.555.5555"
